rohan-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rohan
  annotations:
    configmanagement.gke.io/cluster-selector: fleet-cluster-01
