pod-anupam.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: anupam
  name: nginx-anupam
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
