pod-sada.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: sada
  name: nginx-sada
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
