pod4.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: anupam
  name: nginx-anupam-with-annotations
  annotations:
    configsync.gke.io/cluster-name-selector: fleet-cluster-01
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
