constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyName
metadata:
  name: no-policy-violation-001
spec:
  parameters:
    invalidName: "policy-violation-001"
